fixed gap between pic and track

--- a/styles.css
+++ b/styles.css
@@ -89,6 +89,6 @@ html,body {
 }
 
 #YamTracks{
-   margin-top:100%;
+   margin-top:50%;
 }
 
